update cashcontroller